tests/baselines/reference/MemberFunctionDeclaration3_es6.errors.txt
MemberFunctionDeclaration3_es6.ts(2,6): error TS2304: Cannot find name 'foo'.


==== MemberFunctionDeclaration3_es6.ts (1 errors) ====
    class C {
       *[foo]() { }
         ~~~
!!! error TS2304: Cannot find name 'foo'.
    }